Border select without "extend" does nor clear selection of bezier nodes in 3D view #39123

Closed
opened 2014-03-12 01:41:19 +01:00 by Duarte Farrajota Ramos · 6 comments

System Information
Windows 7 64bits or
Windows XP 64bits

Blender Version
Broken: Blender ced595a
or 25ad7b

Short description of error
Border select without "extend" does nor clear selection of bezier nodes in 3D view

Exact steps for others to reproduce the error
Got to preferences>input tab
Search for border select
In the 3D view Border Select remove the "Extend" option
Now add a bezier curve in the 3D view
Select some random nodes
Do a border select on one of the remaining unselected vertices

Should clear the other previously selected but doesn't

**System Information** Windows 7 64bits or Windows XP 64bits **Blender Version** Broken: Blender ced595a or 25ad7b **Short description of error** Border select without "extend" does nor clear selection of bezier nodes in 3D view **Exact steps for others to reproduce the error** Got to preferences>input tab Search for border select In the 3D view Border Select remove the "Extend" option Now add a bezier curve in the 3D view Select some random nodes Do a border select on one of the remaining unselected vertices Should clear the other previously selected but doesn't

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @DuarteRamos

Added subscriber: @DuarteRamos
Sergey Sharybin self-assigned this 2014-03-12 08:33:12 +01:00

This issue was referenced by blender/blender-addons-contrib@0a3850fde4

This issue was referenced by blender/blender-addons-contrib@0a3850fde40aacf1320ee6af64ed53db67c0606c

This issue was referenced by 0a3850fde4

This issue was referenced by 0a3850fde40aacf1320ee6af64ed53db67c0606c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0a3850fde4.

Closed by commit 0a3850fde4.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39123
No description provided.