Fix T39123: Border select without "extend" does nor clear selection of bezier nodes in 3D view

This is a regression introduced in fbc7ab30f and caused by the wrong object
being passed to the function.

Not sure passing editnurb as an argument is a good thing to do..